# Qwen3-ASR

./: .gitignore  CLAUDE.md  pyproject.toml
qwen3_asr_app/: config.py  main.py
qwen3_asr_app/audio/: capture.py  processor.py
qwen3_asr_app/inference/: engine.py  ov_decoder.py  ov_encoder.py
qwen3_asr_app/ui/: main_window.py
qwen_asr/: __init__.py
scripts/: _check_deps.py  _check_env.py  _inspect_decoder.py  benchmark_decoder.py  benchmark_genai_npu.py  export_decoder.py  export_decoder_stateful.py  export_encoder.py  fix_decoder_remove_input_ids.py  test_app_debug.py  test_app_import.py  test_app_streaming.py  test_e2e.py  test_e2e_wav.py  test_full_npu_streaming.py  test_genai_npu.py  test_genai_npu_debug.py  test_inputs_embeds.py  test_inputs_embeds_workarounds.py  test_npu.py  test_npu_decoder_embeds.py  test_npu_embeds.py  test_surgery_e2e.py  verify_env.py
